Drinkitem style tweak

--- a/src/styles/components/menus/drinks/_bottle-item.scss
+++ b/src/styles/components/menus/drinks/_bottle-item.scss
@@ -8,6 +8,11 @@
         font-weight: 700;
         color: $white !important;
         font-style: normal !important;
+        margin-right: 0.25rem !important;
+      }
+
+      &_size {
+        margin-right: 0.25rem !important;
       }
 
       &_alcohol-content {
